<resources>
    <string name="app_name">AppDemo</string>
    <string name="inbox">Inbox%1$s</string>

    <string name="acc_partner_id">comptedemosdk1e3b35fb8ad5024</string>
    <string name="acc_private_key">78dbaf3fac56784aa5f26a3fcf27996983b892fd</string>

    <string name="acc_logging">true</string>
    <string name="acc_no_geoloc">true</string>
    <string name="title">Title</string>
    <string name="sender">Sender</string>
    <string name="date">Date</string>
    <string name="extract">Extract</string>
    <string name="categorie">Categorie</string>
    <string name="body">Body</string>
    <string name="delete">Delete</string>
    <string name="message">Message</string>
    <string name="delete_message">Are you sure you want to delete this message ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
