<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="12dp">

            <ImageView
                android:id="@+id/iconMessage"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/electric_blue"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_sender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sender"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/extract"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/categoryMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="3dp"
                android:background="#007AFF"
                android:paddingBottom="3dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="3dp"
                android:text="@string/categorie"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"
            android:background="@color/light_grey" />

        <TextView
            android:id="@+id/contentMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/body"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <WebView
            android:id="@+id/webViewShowMessage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="12dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

    </LinearLayout>

</ScrollView>